add update status task : update, validation, documentation
