# storage/api-docs/api-docs.json
@@ -415,6 +415,143 @@
                 }
             }
         },
+        "/api/tasks/{id}/status": {
+            "patch": {
+                "tags": [
+                    "Task"
+                ],
+                "summary": "Update Task Status",
+                "description": "Update task status.",
+                "operationId": "31ef6e1c306e89f3af249c866b45a1a7",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Task id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 26
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "Status id",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "status_id"
+                                ],
+                                "properties": {
+                                    "status_id": {
+                                        "description": "Status id",
+                                        "type": "integer",
+                                        "example": 2
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success update task status",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "Success"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Success update task status"
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer",
+                                                    "example": 26
+                                                },
+                                                "title": {
+                                                    "type": "string",
+                                                    "example": "Cuci AC ruang kelas ssss"
+                                                },
+                                                "description": {
+                                                    "type": "string",
+                                                    "example": "Cuci seluruh AC rai 10."
+                                                },
+                                                "status_id": {
+                                                    "type": "integer",
+                                                    "example": 2
+                                                },
+                                                "creator_id": {
+                                                    "type": "integer",
+                                                    "example": 3
+                                                },
+                                                "assignee_id": {
+                                                    "type": "integer",
+                                                    "example": 24
+                                                },
+                                                "report": {
+                                                    "type": "string",
+                                                    "example": null,
+                                                    "nullable": true
+                                                },
+                                                "created_at": {
+                                                    "type": "string",
+                                                    "format": "date-time",
+                                                    "example": "2025-11-13T01:01:52.000000Z"
+                                                },
+                                                "updated_at": {
+                                                    "type": "string",
+                                                    "format": "date-time",
+                                                    "example": "2025-11-13T02:40:38.000000Z"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation fail",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Status dari 'Doing' tidak dapat diubah menjadi 'Doing'."
+                                        },
+                                        "errors": {
+                                            "properties": {
+                                                "status_id": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "Status dari 'Doing' tidak dapat diubah menjadi 'Doing'."
+                                                    }
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/tasks/{id}": {
             "put": {
                 "tags": [
